--- a/src/sections/styles/map.css
+++ b/src/sections/styles/map.css
@@ -35,3 +35,7 @@
         width: 18rem;
     }
 }
+
+.leaflet-popup-content-wrapper {
+    background-color: var(--popup-background-color);
+}
